added styling for section.

--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -297,6 +297,14 @@ section {
     padding: 60px 0 0;
 }
 
+.section-headless {
+    padding: 0;
+}
+
+.section-foot {
+    padding: 0 0 60px;
+}
+
 .section-bg {
     background-color: #f2f5f4;
 }
