--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -28,6 +28,11 @@
     text-shadow:1px 1px 6px black;
 }
 
+.bg_img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
