--- a/src/main/webapp/assets/css/main.css
+++ b/src/main/webapp/assets/css/main.css
@@ -153,6 +153,8 @@
     background: cornsilk;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
+    border: solid 2px #4568dc;
+    border-radius: 10px;
 }
 
 .navbar .dropdown ul li {
@@ -358,39 +360,6 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
-.back-to-top {
-    position: fixed;
-    visibility: hidden;
-    opacity: 0;
-    right: 15px;
-    bottom: 15px;
-    z-index: 99999;
-    background: #1bbca3;
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    transition: all 0.4s;
-}
-
-.back-to-top i {
-    font-size: 24px;
-    color: #fff;
-    line-height: 0;
-}
-
-.back-to-top:hover {
-    background: #fb058a;
-    color: #fff;
-}
-
-.back-to-top.active {
-    visibility: visible;
-    opacity: 1;
-}
-
-/*--------------------------------------------------------------
 # Welcome
 --------------------------------------------------------------*/
 .welcomed{
@@ -552,8 +521,14 @@ section {
     display: inline-block;
 }
 
-.navi li.active a{
+.navi .dropdown ul li.active a{
+    color: #ffffff;
+}
+
+.navi li.active,
+.navi .dropdown ul li.active{
     color:#ffffff;
+    border-radius: 5px;
     background: rgb(219,60,76);
     background: -moz-linear-gradient(top,  rgba(219,60,76,1) 0%, rgba(197,54,68,1) 56%, rgba(162,44,56,1) 99%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(219,60,76,1)), color-stop(56%,rgba(197,54,68,1)), color-stop(99%,rgba(162,44,56,1)));
@@ -569,7 +544,7 @@ section {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
-    display:block;
+    display:flex;
     padding: 8px 18px;
     color: #ffffff;
     font-size: 0.8125em;
